Arreglamos el metodo del ganador por si hay un empate (hecho por xavi, pero se le rompio todo)